--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -33,6 +33,7 @@
 				<a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-folder-open" aria-hidden="true"></i> &nbsp;Item Seguro <b class="caret"></b></a>
 				<ul class="dropdown-menu">
                   <li><a href="#" th:href="@{/item/cadastro-seguroAutomovel}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Automóvel </a></li>
+                  <li><a href="#" th:href="@{/item/cadastro-seguroResidencial}"> <i class="glyphicon glyphicon-list-alt" aria-hidden="true"></i> &nbsp;Seguro de Residência </a></li>
                 </ul>
 			</li>
 		</ul>
