--- a/src/main/resources/templates/item/cadastro-seguroAutomovel.html
+++ b/src/main/resources/templates/item/cadastro-seguroAutomovel.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Cadastro de Segurado</title>
+<title>Cadastro de Automóvel</title>
 
 </head>
 <body>
@@ -12,7 +12,7 @@
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Cadastro do Segurado</legend>
+		<legend class="scheduler-border">Cadastro de Automóvel</legend>
 		<br/>
 		
 		<form action="#" th:action="@{/item/gravar-seguroAutomovel}" th:object="${itemSeguroAutomovel}" method="post">
