--- a/src/main/resources/templates/item/cadastro-seguroEmpresarial.html
+++ b/src/main/resources/templates/item/cadastro-seguroEmpresarial.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8" />
-<title>Cadastro de Seguro Residencial</title>
+<title>Cadastro de Seguro Empresarial</title>
 
 </head>
 <body>
@@ -12,7 +12,7 @@
 	<div class="container" id="content" tabindex="-1">
 		<div class="borda-div">
 		<fieldset class="scheduler-border">
-		<legend class="scheduler-border">Cadastro do Seguro Residencial</legend>
+		<legend class="scheduler-border">Cadastro do Seguro Empresarial</legend>
 		<br/>
 		
 		<form action="#" th:action="@{/item/gravar-seguroEmpresarial}" th:object="${itemSeguroEmpresarial}" method="post">
